--- a/csharp-08.csproj
+++ b/csharp-08.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <RootNamespace>csharp_08</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
