--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -15,6 +15,14 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
+    "csharp-08": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    },
     "csharp_08": {
       "commandName": "Project",
       "launchBrowser": true,
