--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -17,6 +17,7 @@
     },
     "csharp_08": {
       "commandName": "Project",
+      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
