--- a/csharp-08.csproj
+++ b/csharp-08.csproj
@@ -15,4 +15,7 @@
     <PackageReference Include="System.Data.SQLite" Version="1.0.111" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Classes\util\" />
+  </ItemGroup>
 </Project>
