--- a/csharp-08.csproj
+++ b/csharp-08.csproj
@@ -12,10 +12,11 @@
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.6.292" />
     <PackageReference Include="System.Data.SQLite" Version="1.0.111" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Classes\utils\" />
+    <Folder Include="Classes\Utils\" />
   </ItemGroup>
 </Project>
